@@ -1,3 +1,5 @@
+C  Modified 2002-05-20 for R to add a tolerance of positive definiteness.
+C
 c
 c     dpofa factors a double precision symmetric positive definite
 c     matrix.
@@ -44,9 +46,11 @@ c
 c
 c     internal variables
 c
-      double precision ddot,t
+      double precision ddot,t,eps
       double precision s
       integer j,jm1,k
+      data eps/1.d-14/
+
 c     begin block with ...exits to 40
 c
 c
@@ -64,7 +68,8 @@ c
    20       continue
             s = a(j,j) - s
 c     ......exit
-            if (s .le. 0.0d0) go to 40
+c            if (s .le. 0.0d0) go to 40
+            if (s .le. eps * abs(a(j,j))) go to 40
             a(j,j) = dsqrt(s)
    30    continue
          info = 0
